fixed inventory items not fitting into grid cells

--- a/styles/style.css
+++ b/styles/style.css
@@ -95,12 +95,6 @@ fieldset {
 
 /* OBJECTS */
 .objects {
-  /* position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50% );
-  width: calc(100vw - 700px); 
-  height: calc(100vh - 500px); */
   position: absolute;
   top: 47%;
   left: 47%;
@@ -109,8 +103,6 @@ fieldset {
   height: 75%;
 
   display: grid;
-  /* grid-template-columns: repeat(4, minmax(100px, 200px));
-  grid-template-rows: repeat(4, minmax(100px, 200px)); */
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
   grid-template-areas:
@@ -149,10 +141,10 @@ fieldset {
   opacity: 1;
   filter: none;
   filter: var(--shadow);
-  /* height: inherit;
+  height: inherit;
   max-height: 120px;
   display: flex;
-  align-items: center; */
+  align-items: center;
 }
 /* END OF OBJECTS */
 
